# docs_translator

./: .env.example  .gitignore  README.md  pyproject.toml
src/docs_translator/: main.py  types.py
src/docs_translator/agents/: __init__.py  docs_developer.py  translator.py
src/docs_translator/tools/: __init__.py  github_tools.py
